--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -327,10 +327,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expression cannot contain assignment, perhaps you meant \"==\"? (2132836892.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [36], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    type(5 = 2)\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expression cannot contain assignment, perhaps you meant \"==\"?\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(5 = 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -347,10 +358,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type({5, 2})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -363,12 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le type de x est <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 2 \n",
+    "print(\"le type de x est\", type(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -382,10 +417,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v = 120"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,12 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120 = 10 x 11 + 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(v, \"=\", v // 11, \"x\", 11,\"+\", 10 )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,10 +464,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10\n",
+    "9\n",
+    "10"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -573,10 +635,7 @@
     "tags": []
    },
    "outputs": [],
-   "source": [
-    "a = \"hello\"\n",
-    "b = 'world'"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
